Coverity analysis defect 122015: Argument cannot be negative

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Security 2022-04-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Argument cannot be negative

      The negative argument will be interpreted as a very large unsigned value. Negative value used as argument to a function expecting a positive value (for example, size of buffer or allocation)
      /src/mongo/crypto/fle_crypto.cpp:473: NEGATIVE_RETURNS 122015 Assigning: "rho" = "reader->getDocumentCount()".
      /src/mongo/crypto/fle_crypto.cpp:505: NEGATIVE_RETURNS 122015 "rho" is passed to a parameter that cannot be negative.

            Assignee:
            Mark Benvenuto
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: