SERVER-65207 Coverity analysis defect 122015: Argument cannot be negative